Fix: fixed layout issue for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,12 @@
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
   margin-top: 120px;
 }
+@media only screen and (max-width: 768px) {
+  .css-zcmli0-MuiGrid-root {
+    flex-direction: column !important;
+    margin-left: -82px !important;
+  }
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
